[tool.poetry]
name = "match-scheduler"
version = "1.0.0"
description = "Schedules matches with graph theory, and optimises against playing with or against same people, and some rest rules too"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
isort = "^5.13.2"
black = "^24.8.0"
mypy = "^1.11.2"
pytest = "^8.3.3"

[tool.black]
line-length = 79

[tool.pylint]
max-line-length = 79

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
